[gd_scene load_steps=5 format=3 uid="uid://dy7m5jtiofcmf"]

[ext_resource type="Theme" uid="uid://8i27k6tj1d3o" path="res://Other/Themes/basic.tres" id="1_5w5jm"]
[ext_resource type="Script" uid="uid://bt1ym7x1bvgf1" path="res://Other/Scenes/User Interface/Text Manager/text_manager_character.gd" id="1_sjc3v"]
[ext_resource type="PackedScene" uid="uid://b2a845i4npe34" path="res://Other/Scenes/animation_general.tscn" id="2_sjkrq"]
[ext_resource type="AudioStream" uid="uid://by1ctnoy7wy83" path="res://Assets/Sounds/sfx/coin_collect.wav" id="6_nvc2c"]

[node name="text_manager_character" type="Control"]
z_index = 5
custom_minimum_size = Vector2(20, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 20.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_sjc3v")

[node name="character" type="RichTextLabel" parent="."]
light_mask = 2
visibility_layer = 2
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_5w5jm")
text = "t"
horizontal_alignment = 1
vertical_alignment = 1

[node name="animation_general" parent="character" instance=ExtResource("2_sjkrq")]

[node name="bg" type="ColorRect" parent="character"]
z_index = -1
layout_mode = 0
offset_left = -5.0
offset_right = 25.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_nvc2c")

[node name="cooldown_sfx" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="cooldown_sfx" to="." method="_on_cooldown_sfx_timeout"]
